  previous releases: the setup function now takes an ABI version as its first
  argument.  When compiling your loaded object you can test the GMK_ABI_VERSION 
  constant at compile time to detect which ABI should be used.  At runtime
  your initialization function can check the provided ABI version to verify
  it's being loaded correctly.

* New feature: Makefile warning reporting control
  A new option "--warn" controls reporting of warnings for makefiles.  Actions
  can be set to "ignore", "warn", or "error".  Two new warnings are reported:
  assigning to invalid variable names, and referencing invalid variable names
  (both set to "warn" by default), in addition to the existing warning for
  undefined variables (defaults to "ignore"). "--warn-undefined-variables" is
  deprecated, and is translated to "--warn=undefined-vars" internally.

* New feature: Control warnings with the .WARNINGS variable
  In addition to --warn from the command line, which take effect for make
  invoked recursively, warnings can be controlled only for the current
  instance of make using the .WARNINGS variable.

* Tests in the regression test suite now are run in their own directory to
  avoid cross-contamination and allow cleanup if the tests are interrupted.
  More information is printed about failing tests.


Version 4.4.1 (26 Feb 2023)

This release is primarily a bug-fix release.
A complete list of bugs fixed in this version is available here:

https://sv.gnu.org/bugs/index.php?group=make&report_id=111&fix_release_id=110&set=custom

* WARNING: Backward-incompatibility!
  In previous releases it was not well-defined when updates to MAKEFLAGS made
  inside a makefile would be visible.  This release ensures they are visible
  immediately, even when invoking $(shell ...) functions.  Also, command line
  variable assignments are now always present in MAKEFLAGS, even when parsing
  makefiles.
  Implementation provided by Dmitry Goncharov <dgoncharov@users.sf.net>
