@@ -674,6 +674,7 @@ int guile_gmake_setup (const floc *flocp);
 /* Loadable object support.  Sets to the strcached name of the loaded file.  */
 int load_file (const floc *flocp, struct file *file, int noerror);
 int unload_file (const char *name);
+void unload_all (void);
 
 /* Maintainer mode support */
 #ifdef MAKE_MAINTAINER_MODE
